--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Omni Fodd</title>
-		<link rel="stylesheet" type="text/css" href="vendor/css/normalize-css.v3.0.2.css"> 
-		<link rel="stylesheet" type="text/css" href="vendor/css/grid.css"> 
-		<link rel="stylesheet" type="text/css" href="vendor/css/font-awesome.css"> 
+		<link rel="stylesheet" type="text/css" href="css/normalize-css.v3.0.2.css"> 
+		<link rel="stylesheet" type="text/css" href="css/grid.css"> 
+		<link rel="stylesheet" type="text/css" href="css/font-awesome.css"> 
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="css/media.css">
 		<link rel="shortcut icon" type="image/x-icon" href="img/jt.ico">        <!-- <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300,300italic' rel='stylesheet' type='text/css'> -->
@@ -347,7 +347,7 @@
 			</div>
 		</footer>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<script type="text/javascript" src="vendor/js/jquery.waypoints.js"></script>
+		<script type="text/javascript" src="js/jquery.waypoints.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
