Add mobile nav bar

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 							<li><a href="#cities">Our cities</a></li>
 							<li><a href="#plans">Sign up</a></li>
 						</ul>
+						<i class="fa fa-bars"></i>
 					</nav>
 				</div>
 			</div>
