--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<section id="features">
 			<div class="row">
 				<h2>Get food fast &mdash; not fast food.</h2>
-				<p id="feature-main-text">Hello, wewe're Omnifood, your new premium food delivery service. We know you're always busy. No time for cooking. So let us take care of that, we're really good at it, we promise!
+				<p id="feature-main-text">Hello, we're Omnifood, your new premium food delivery service. We know you're always busy. No time for cooking. So let us take care of that, we're really good at it, we promise!
 				</p>
 			</div>
 			<div class="row" id="row-for-col">
